--- a/src/application/DayWindow.fxml
+++ b/src/application/DayWindow.fxml
@@ -9,29 +9,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DayController">
    <children>
-      <Button fx:id="logOutButton" layoutX="333.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOutButtonClicked" prefHeight="25.0" prefWidth="65.0" text="Log out" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
-      <Button fx:id="backToOverviewButton" layoutX="19.0" layoutY="14.0" mnemonicParsing="false" onAction="#backToOverviewButtonClicked" prefHeight="25.0" prefWidth="65.0" text="Back" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="20.0" />
-      <Button fx:id="budgetButton" layoutX="289.0" layoutY="349.0" mnemonicParsing="false" onAction="#bugdetButtonClicked" prefWidth="84.0" text="Budget" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" />
-      <Button fx:id="dayUpdateButton" layoutX="120.0" layoutY="20.0" mnemonicParsing="false" onAction="#dayUpdateButtonClicked" prefHeight="25.0" prefWidth="170.0" text="Update" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="315.0" AnchorPane.topAnchor="20.0" />
-      <TableView prefHeight="372.0" prefWidth="251.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="329.0" AnchorPane.topAnchor="63.0">
+      <Button fx:id="logOutButton" layoutX="333.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOutButtonClicked" prefHeight="25.0" prefWidth="65.0" text="Log out" AnchorPane.bottomAnchor="455.0" AnchorPane.leftAnchor="455.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
+      <Button fx:id="backToOverviewButton" layoutX="19.0" layoutY="14.0" mnemonicParsing="false" onAction="#backToOverviewButtonClicked" prefHeight="25.0" prefWidth="65.0" text="Back" AnchorPane.bottomAnchor="455.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="455.0" AnchorPane.topAnchor="20.0" />
+      <Button fx:id="budgetButton" layoutX="289.0" layoutY="349.0" mnemonicParsing="false" onAction="#bugdetButtonClicked" prefWidth="84.0" text="Budget" AnchorPane.bottomAnchor="455.0" AnchorPane.leftAnchor="310.0" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="20.0" />
+      <Button fx:id="dayUpdateButton" layoutX="212.0" layoutY="20.0" mnemonicParsing="false" onAction="#dayUpdateButtonClicked" prefHeight="25.0" prefWidth="170.0" text="Update" AnchorPane.bottomAnchor="455.0" AnchorPane.leftAnchor="165.0" AnchorPane.rightAnchor="310.0" AnchorPane.topAnchor="20.0" />
+      <TableView fx:id="dayNamesTable" prefHeight="372.0" prefWidth="251.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="310.0" AnchorPane.topAnchor="63.0">
         <columns>
-          <TableColumn fx:id="dayNameColumn" prefWidth="167.0" text="Name" />
-          <TableColumn fx:id="dayAttendingColumn" prefWidth="85.0" text="Attending" />
+          <TableColumn fx:id="dayNameColumn" prefWidth="269.0" text="Attendees" />
         </columns>
       </TableView>
-      <Pane layoutX="310.0" layoutY="289.0" prefHeight="200.0" prefWidth="260.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="310.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="289.0">
-         <children>
-            <TextArea fx:id="dayNote" prefHeight="150.0" prefWidth="270.0" />
-         </children>
-      </Pane>
-      <Button layoutX="528.0" layoutY="555.0" mnemonicParsing="false" text="Set Note" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
-      <GridPane layoutX="310.0" layoutY="63.0" AnchorPane.bottomAnchor="210.0" AnchorPane.leftAnchor="310.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="63.0">
+      <TextArea fx:id="dayNote" layoutX="310.0" layoutY="285.0" prefHeight="150.0" prefWidth="270.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="310.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="285.0" />
+      <Button layoutX="528.0" layoutY="555.0" mnemonicParsing="false" text="Set Note" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="455.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="455.0" />
+      <GridPane layoutX="310.0" layoutY="63.0" AnchorPane.bottomAnchor="210.0" AnchorPane.leftAnchor="310.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="65.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="10.0" prefWidth="130.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.5" minWidth="10.0" prefWidth="140.0" />
@@ -51,33 +45,36 @@
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total Price:" GridPane.rowIndex="3" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Price per Person:" GridPane.rowIndex="4" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Notes:" GridPane.rowIndex="5" />
-            <Label text="Label" GridPane.columnIndex="1">
+            <Label fx:id="dateLabel" text="dateLabel" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Label fx:id="chefsLabel" text="chefsLabel" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Label fx:id="shopperLabel" text="shopperLabel" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="5.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Label fx:id="priceLabel" text="priceLabel" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="5.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Label fx:id="perPriceLabel" text="perPriceLabel" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <padding>
                   <Insets left="5.0" />
                </padding>
             </Label>
          </children>
       </GridPane>
-      <Button layoutX="310.0" layoutY="20.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="170.0" text="Set Chefs" AnchorPane.leftAnchor="315.0" AnchorPane.rightAnchor="125.0" />
+      <Button fx:id="setChefsButton" layoutX="125.0" layoutY="455.0" mnemonicParsing="false" onAction="#setChefsButtonClicked" prefHeight="25.0" prefWidth="146.0" text="Set Chefs" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="165.0" AnchorPane.rightAnchor="310.0" AnchorPane.topAnchor="455.0" />
+      <Button fx:id="attendDayButton" layoutX="330.0" layoutY="455.0" mnemonicParsing="false" onAction="#attendDayButtonClicked" prefHeight="25.0" prefWidth="170.0" text="Attend Day" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="310.0" AnchorPane.rightAnchor="165.0" AnchorPane.topAnchor="455.0" />
+      <Button fx:id="setPrice" layoutX="10.0" layoutY="455.0" mnemonicParsing="false" onAction="#setPriceButtonClicked" prefHeight="25.0" prefWidth="146.0" text="Set Price" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="455.0" AnchorPane.topAnchor="455.0" />
+      <Button fx:id="lockDayButton" layoutX="274.0" layoutY="423.0" mnemonicParsing="false" onAction="#lockDayButtonClicked" text="Lock Day" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="310.0" AnchorPane.topAnchor="410.0" />
    </children>
 </AnchorPane>
