--- a/src/application/Budget.fxml
+++ b/src/application/Budget.fxml
@@ -32,6 +32,8 @@
             <Font size="30.0" />
          </font>
       </Label>
-      <Button fx:id="resetButton" layoutX="221.0" layoutY="271.0" mnemonicParsing="false" onAction="#resetButtonClicked" text="Pay" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="250.0" />
+      <Button fx:id="resetButton" layoutX="33.0" layoutY="251.0" mnemonicParsing="false" onAction="#resetButtonClicked" text="Reset " AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="270.0" AnchorPane.topAnchor="270.0" />
+      <Button fx:id="payButton" layoutX="180.0" layoutY="262.0" mnemonicParsing="false" onAction="#payButtonClicked" text="Pay" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="160.0" AnchorPane.topAnchor="250.0" />
+      <Button fx:id="getPaymentButton" layoutX="280.0" layoutY="262.0" mnemonicParsing="false" onAction="#getPaymentButtonClicked" text="Get payment" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="270.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="270.0" />
    </children>
 </AnchorPane>
