--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -43,7 +43,7 @@
                   <Font size="18.0" />
                </font>
             </TextField>
-            <Label fx:id="wrongUsernameLabel" textFill="#bc0a0a" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <Label fx:id="wrongUsernameLabel" textFill="#d6d4d2" GridPane.columnSpan="2" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
