--- a/src/application/NewUser.fxml
+++ b/src/application/NewUser.fxml
@@ -30,7 +30,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="newUserLabel" textFill="#c30808" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <Label fx:id="newUserLabel" textFill="#d6d4d2" GridPane.columnSpan="2" GridPane.rowIndex="2" />
             <Label text="Please enter your name: " GridPane.columnSpan="2" />
             <TextField fx:id="newUserNameTextField" promptText="Name" GridPane.columnSpan="2" GridPane.rowIndex="1">
                <font>
