--- a/src/application/SelectKitchen.fxml
+++ b/src/application/SelectKitchen.fxml
@@ -28,7 +28,7 @@
             <Font size="10.0" />
          </font>
       </Button>
-      <Label fx:id="noKitchenLabel" layoutX="294.0" layoutY="369.0" textFill="#bc0a0a" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="30.0" />
+      <Label fx:id="noKitchenLabel" layoutX="294.0" layoutY="369.0" textFill="#d6d4d2" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="30.0" />
       <Button fx:id="joinKitchenButton" layoutX="55.0" layoutY="292.0" mnemonicParsing="false" onAction="#joinKitchenButtonClicked" prefHeight="27.0" prefWidth="145.0" text="Join Dinner Club" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="215.0" AnchorPane.topAnchor="292.0" />
    </children>
 </AnchorPane>
