--- a/src/application/application.css
+++ b/src/application/application.css
@@ -1,1 +1,4 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+.root{
+    -fx-base: rgb(250,160,46 );
+    -fx-background: rgb(88,79,74);
+}
